testdata/zkc/invalid/memory_11.zkc
//error
memory buffer(addr:u16) -> (bytes:u8)

fn g(addr:u16) -> (byte:u8) {
  byte = f(addr)
}

fn f<buffer>(addr:u16) -> (byte:u8) {
  //byte = buffer[addr]
  buffer[addr] = 0
  byte = 0
  return
}
